--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
             <input placeholder="Superclass" name='superclass'>
             <input placeholder="Rotable Bond" name='rotable_bond_count'>
             <input placeholder="complexity" name='complexity'>
-            <input type="submit" value="Submit"
+            <input type="submit" value="Submit">
         </form>
 
         {% for drug in drugs %}
